simulation-scripts/scenario/devious-developer-data-dump/apply/09-jumpbox.yaml
## JumpBox Resources
apiVersion: v1
kind: Namespace
metadata:
  name: dmz
---
apiVersion: v1
kind: Pod
metadata:
  name: jumpbox
  namespace: dmz
spec:
  containers:
  - image: docker.io/controlplaneoffsec/kubectl
    command:
      - sleep
      - inf
    name: jumpbox
    securityContext:
      allowPrivilegeEscalation: false
  restartPolicy: Always
