simulation-scripts/scenario/devious-developer-data-dump/apply/04-zot.yaml
apiVersion: v1
kind: Service
metadata:
  name: zot
spec:
  type: ClusterIP
  ports:
    - name: zot
      port: 5000
      targetPort: zot
      protocol: TCP
  selector:
    app: zot
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zot
  labels:
    app: zot
spec:
  selector:
    matchLabels:
      app: zot
  replicas: 1
  template:
    metadata:
      labels:
        app: zot
    spec:
      serviceAccountName: zot
      nodeName: k8s-master-0
      tolerations:
      - operator: Exists
      containers:
      - name: zot
        securityContext:
          allowPrivilegeEscalation: false
        image: docker.io/controlplaneoffsec/zot-registry:latest
        imagePullPolicy: IfNotPresent
        ports:
          - name: zot
            containerPort: 5000
        volumeMounts:
        - name: config
          mountPath: /etc/zot
          readOnly: true
        - name: data
          mountPath: /data/zot
      volumes:
      - name: config
        projected:
          sources:
          - configMap:
              name: zot-config
          - secret:
              name: ba
      - name: data
        persistentVolumeClaim:
          claimName: zot-data-pvc
